# workspace_2

./: .diary_log.swp  diary_log  ros2_note  stats.py
MARS_ROVER/: MARS_ROVER.ino  back_up.ino  motor_control.ino  new_sbus.ino  ppm.ino  sbus.ino
MARS_ROVER/PPM_test/: PPM_test.ino
MARS_ROVER/myros2/publisher/: publisher.ino  user_config.h
MARS_ROVER/sbus_test/: sbus_test.ino
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/msg_manage/share/msg_manage/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_package2/lib/my_package2/: my_node_py
install/my_package2/share/my_package2/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/project_2/lib/project_2/: arduino_reader  client  talker  (+15 more)
log/: latest_build
note/: 10-serial-port.rules  ros2_note
src/ROS-TCP-Endpoint/launch/: endpoint.py
src/msg_manage/: .CMakeLists.txt.swp  CMakeLists.txt
src/project_2/: .setup.py.swp  \  package.xml  setup.cfg  setup.py
src/project_2/launch/: message_sender.py  slam_tcp.py  test_launch.py
src/project_2/launch/old/: offline_launch.py
src/project_2/params/: mapper_params_online_sync.yaml
src/project_2/project_2/: .motor_cmd.py.swp  .slam_navigation.py.swp  .test_client.py.swp  .test_service.py.swp  \  a_star_nav.py  arduino_reader.py  cmd_send.py  cmd_send_recoder.py  img_processor.py  imu_reader.py  joy_motor.py  motor_cmd.py  phy_a_star.py  recoder.py  slam_navigation.py
src/project_2/project_2/csv_files/: record0.csv  record1.csv  record_t.csv  recordsuccess.csv  recordsuccess2.csv
src/project_2/project_2/test/: test_action_server.py  test_mymsg.py  test_mymsg2.py  test_mysrv.py  test_mysrv2.py  test_parm.py  test_service.py
src/project_2/rviz/: nav2_unity.rviz  nav2_unity_depth.rviz  unity_pcl2.rviz
src/unity_slam_example/launch/: unity_slam_example.py
src/unity_slam_example/pkg/: libceres-dev_1.14.0-4ubuntu1.1_arm64.deb  libceres1_1.14.0-4ubuntu1.1_arm64.deb
src/unity_slam_example/rviz/: nav2_unity.rviz
(+94 files in other folders)
